...
import com.android.sample.ui.common.MainPageTopBar
import com.android.sample.ui.replacement.ReplacementOverviewTestTags
import com.android.sample.ui.theme.*
import com.android.sample.ui.theme.Palette

object SettingsScreenTestTags {
  const val ROOT = "settings_screen"
  const val PROFILE_BUTTON = "profile_button"
  const val ADMIN_BUTTON = "admin_info_button"
  const val MAP_SETTINGS_BUTTON = "map_settings_button"
  const val ORGANIZATION_BUTTON = "organization_selection_button"
  const val HOURRECAP_BUTTON = "hour_recap_button"
  const val SNACKBAR = "snackbar"
}

/** Settings screen with navigation to profile. */
@OptIn(ExperimentalMaterial3Api::class)
@Preview
@Composable
...
